# crisisops

./: .cursorrules  .gitignore  Blog.md  CLAUDE.md  README.md  README_HF.md  app.py  check_requirements.py  crisisops_v2_final.html  main.py  openenv.yaml  pyproject.toml  requirements.txt  requirements_spaces.txt  requirements_train.txt
baselines/: llm_agent.py  random_agent.py  replay.py
calibration/: calibrate.py
deployment/: jira_adapter.py  mcp_server.py
dump/: ACTIONS.md  BASELINES.md  ENVIRONMENT.md  LLM_INFERENCE_DEBUG.md  REPO_CONTEXT.md  TESTS.md  colab_preflight.md  hackathon_plan.md  instructions.txt  kaggle_preflight.md  prompt_v1.txt  prompt_v2.txt  prompt_v3.txt  prompt_v4.txt
env/: __init__.py  actions.py  candor.py  crisis_generator.py  environment.py  llm_deceptive_agent.py  memory_buffer.py  schema_drift.py  stakeholders.py  state.py
plots/: README.md
reward/: baseline.py  counterfactual.py  metrics.py
scenarios/: level1.py  level2.py  level3.py  level4.py
scripts/: upload_hf_space.sh
static/: styles.css
tests/: test_candor.py  test_curriculum.py  test_env.py  test_reward.py
training/: Qwen3_GRPO_Edited.ipynb  colab_notebook.ipynb  colab_notebook_aryan.ipynb  curriculum.py  grpo_trainer.py  grpo_verbose_callback.py  kaggle_notebook.ipynb
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  (+7 more)
