[project]
name = "crisisops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "openenv>=0.1.13",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "torch>=2.10.0",
    "trl>=0.24.0",
    "unsloth>=2026.4.7",
    "uvicorn>=0.45.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
